src/objects/ProductInstructionLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>Item Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airscaler ZA-55 LM</fullName>
                </value>
                <value>
                    <fullName>Airscaler ZA-55 LS</fullName>
                </value>
                <value>
                    <fullName>BeeFill 2in1</fullName>
                </value>
                <value>
                    <fullName>BeeFill Pack</fullName>
                </value>
                <value>
                    <fullName>Guttafusion Ofen</fullName>
                </value>
                <value>
                    <fullName>Raypex 6</fullName>
                </value>
                <value>
                    <fullName>Reciproc direct</fullName>
                </value>
                <value>
                    <fullName>VDW.CONNECT Drive</fullName>
                </value>
                <value>
                    <fullName>VDW.CONNECT Locate</fullName>
                </value>
                <value>
                    <fullName>VDW.GOLD</fullName>
                </value>
                <value>
                    <fullName>VDW.GOLD Reciproc</fullName>
                </value>
                <value>
                    <fullName>VDW.SILVER</fullName>
                </value>
                <value>
                    <fullName>VDW.SILVER Reciproc</fullName>
                </value>
                <value>
                    <fullName>VDW.ULTRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemNo__c</fullName>
        <formula>CASE(ItemName__c,
&apos;BeeFill 2in1&apos;, &apos;V040541000000&apos;,
&apos;BeeFill Pack&apos;, &apos;V040544000000&apos;,
&apos;Airscaler ZA-55 LM&apos;, &apos;V991443000000&apos;,
&apos;Airscaler ZA-55 LS&apos;, &apos;V991444000000&apos;,
&apos;Guttafusion Ofen&apos;, &apos;V041500000000&apos;,
&apos;Raypex 6&apos;, &apos;V041113000000&apos;,
&apos;Reciproc direct&apos;, &apos;V041090000000&apos;,
&apos;VDW.GOLD&apos;, &apos;V041103000000&apos;,
&apos;VDW.GOLD Reciproc&apos;, &apos;V041173000000&apos;,
&apos;VDW.SILVER&apos;, &apos;V041153000000&apos;,
&apos;VDW.SILVER Reciproc&apos;, &apos;V041163000000&apos;,
&apos;VDW.ULTRA&apos;, &apos;V041400000501&apos;, 
&apos;VDW.CONNECT Drive&apos;, &apos;V041183000000&apos;, 
&apos;VDW.CONNECT Locate&apos;, &apos;M00CLOC000000&apos;,
&apos;Not Found&apos;)</formula>
        <label>Item No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInstruction__c</fullName>
        <label>Product Instruction</label>
        <referenceTo>ProductInstruction__c</referenceTo>
        <relationshipLabel>Product Instruction Line Items</relationshipLabel>
        <relationshipName>Product_Instruction_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>Serial No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Instruction Line Item</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Instruction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Software_Update_wrong_product</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Software_Update__c = true, NOT(ISPICKVAL(ItemName__c, &quot;VDW.GOLD Reciproc&quot;)))</errorConditionFormula>
        <errorDisplayField>Software_Update__c</errorDisplayField>
        <errorMessage>Software Updates can only be selected for specific products.</errorMessage>
    </validationRules>
</CustomObject>